Ultimo commit de desarrollo

--- a/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
+++ b/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
@@ -83,7 +83,7 @@
                 cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th>categoria</th>
+                        <th>Categoría</th>
                         <th>Nombre</th>
                         <th>Acciones</th>
                     </tr>
@@ -232,7 +232,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th>categoria</th>
+                        <th>Categoría</th>
                         <th>Nombre</th>
                         <th>Acciones</th>
                     </tr>
