--- a/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
@@ -135,6 +135,7 @@
                                                                         <th>Nombre</th>
                                                                         <th>Direccion</th>
                                                                         <th>Telefono</th>
+                                                                        <th>Email</th>
                                                                         <!-- <th>Accion</th> -->
                                                                     </tr>
                                                                 </thead>
@@ -143,6 +144,7 @@
                                                                         <td>{{mostrar_pedidos.id_cliente.nombre_cliente}}</td>
                                                                         <td>{{mostrar_pedidos.id_cliente.direccion}}</td>
                                                                         <td>{{mostrar_pedidos.id_cliente.telefono}}</td>
+                                                                        <td>{{mostrar_pedidos.id_cliente.email}}</td>
 
                                                                     </tr>
                                                                 </tbody>
@@ -151,6 +153,7 @@
                                                                         <th>Nombre</th>
                                                                         <th>Direccion</th>
                                                                         <th>Telefono</th>
+                                                                        <th>Email</th>
                                                                         <!-- <th>Accion</th> -->
                                                                     </tr>
                                                                 </tfoot>
