--- a/templatedjango/apptemplate/templates/productos/listado_productos.html
+++ b/templatedjango/apptemplate/templates/productos/listado_productos.html
@@ -41,7 +41,7 @@
     
   </style>
 
-  {% for mostrar in productos  %}
+  {% for mostrar in productos reversed %}
 
 
   <div class="col-xl-3 aca2">
