--- a/templatedjango/apptemplate/templates/ventas/ventas.html
+++ b/templatedjango/apptemplate/templates/ventas/ventas.html
@@ -159,6 +159,7 @@
                                                                             <th>Nombre</th>
                                                                             <th>Direccion</th>
                                                                             <th>Telefono</th>
+                                                                            <th>Email</th>
                                                                             <!-- <th>Accion</th> -->
                                                                         </tr>
                                                                     </thead>
@@ -167,6 +168,7 @@
                                                                             <td>{{mostrar_pedidos.id_cliente.nombre_cliente}}</td>
                                                                             <td>{{mostrar_pedidos.id_cliente.direccion}}</td>
                                                                             <td>{{mostrar_pedidos.id_cliente.telefono}}</td>
+                                                                            <td>{{mostrar_pedidos.id_cliente.email}}</td>
                                                                         </tr>
                                                                     </tbody>
                                                                     <tfoot>
@@ -174,6 +176,7 @@
                                                                             <th>Nombre</th>
                                                                             <th>Direccion</th>
                                                                             <th>Telefono</th>
+                                                                            <th>Email</th>
                                                                             <!-- <th>Accion</th> -->
                                                                         </tr>
                                                                     </tfoot>
