--- a/templatedjango/apptemplate/templates/clientes/clientes.html
+++ b/templatedjango/apptemplate/templates/clientes/clientes.html
@@ -46,6 +46,12 @@
 
                             </div>
 
+                            <div class="form-group">
+
+                                <input type="text" class="form-control" name="email" placeholder="Email del Cliente" required>
+
+                            </div>
+
                         </div>
 
                         
@@ -95,6 +101,7 @@
                         <th>Nombre</th>
                         <th>Direccion</th>
                         <th>Telefono</th>
+                        <th>Email</th>
                         <th class="ocultar">Acciones</th> 
                     </tr>
                 </thead>
@@ -109,6 +116,7 @@
                                 <td id="select{{mostrar.id}}">{{mostrar.nombre_cliente}}</td>
                                 <td>{{mostrar.direccion}}</td>
                                 <td>{{mostrar.telefono}}</td>
+                                <td>{{mostrar.email}}</td>
                                 <td class="ocultar">
                                     {% load static %}
                                     <i style="color: white;" type="button" data-toggle="modal"
@@ -155,6 +163,11 @@
                                                     <div class="form-group">
                                                         <label for="recipient-name" class="col-form-label">Telefono del Cliente:</label>
                                                         <input name="telefono" value="{{mostrar.telefono}}" type="text"
+                                                        class="form-control" id="recipient-name" required>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Telefono del Cliente:</label>
+                                                        <input name="email" value="{{mostrar.email}}" type="text"
                                                         class="form-control" id="recipient-name" required>
                                                     </div>
 
@@ -217,6 +230,7 @@
                         <th>Nombre</th>
                         <th>Direccion</th>
                         <th>Telefono</th>
+                        <th>Email</th>
                         <th class="ocultar">Acciones</th>
                     </tr>
                 </tfoot>
