--- a/templatedjango/apptemplate/templates/pedidos/pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/pedidos.html
@@ -273,7 +273,7 @@
                               
                                 {% if not mostrar.estado %}
                                 
-                                    <option id="opcion{{mostrar.id}}" value="{{mostrar.id}}-{{mostrar.direccion}}-{{mostrar.telefono}}">{{mostrar.nombre_cliente}}</option>
+                                    <option id="opcion{{mostrar.id}}" value="{{mostrar.id}}-{{mostrar.direccion}}-{{mostrar.telefono}}-{{mostrar.email}}">{{mostrar.nombre_cliente}}</option>
                                     
                                 {% endif %}
                                   
@@ -296,17 +296,25 @@
 
                         </div>
 
+                        <div class="form-group">
+
+                            <input type="text" class="form-control" name="email" id="email" placeholder="Email del Cliente" readonly>
+
+                        </div>
+
                     </div>
 
                     
                     <script>
                         direccion = document.getElementById('direccion');
                         telefono = document.getElementById('telefono');
+                        email = document.getElementById('email');
                         select_clientes = document.getElementById('nombre_cliente');
 
                         select_clientes.addEventListener("change", function () {
                             direccion.value = select_clientes.value.split('-')[1];
                             telefono.value = select_clientes.value.split('-')[2];
+                            email.value = select_clientes.value.split('-')[3];
                         });
                                 
                     </script>
